# ros_adaptive_models

./: .gitignore  README.md
src/map_launcher/: CMakeLists.txt  classroom_map.yaml  grande_salle.yaml  indoor-1.yaml  kitchen_map.yaml  map_allowed.yaml  package.xml  roomL5.yaml  sandbox.yaml  tum_kitchen.yaml
src/map_launcher/launch/: map_launcher.launch
src/multi_map_server/: CMakeLists.txt  package.xml
src/multi_map_server/src/: main.cpp
src/robots/sim/: CMakeLists.txt  atrv.urdf  package.xml
src/robots/sim/launch/: amcl.launch  robot_state.launch
src/robots/wombot/: CMakeLists.txt  package.xml
src/robots/wombot/launch/: amcl.launch  camera.launch  imu.launch  localization.launch  wombot.launch  wombot_main.launch  wombot_odometry.launch  wombot_tf.launch
src/scripts/: collect_data.py  collect_data_only_bumps.py  morse_scene_setup.py  utils.py
src/scripts/data_collection/: collect_data.py  collect_data_only_bumps.py  morse_scene_setup.py  test_yaw_and_direction.py  utils.py
src/scripts/data_preprocessing/: config.py  convert_data_to_tfrecords.py  convert_data_to_tfrecords_real_data.py  convert_data_to_tfrecords_real_data_hdf5.py
src/scripts/models/: cnn_drive_direction_learner.py  cnn_learner_detached.py  cnn_learner_dual_detached.py  cnn_learner_dual_naive.py  cnn_learner_multiple.py  cnn_learner_multiple_5_way.py  cnn_learner_naive.py  cnn_model_visualizer.py  cnn_model_visualizer_main.py  cnn_naive_model_searcher.py  cnn_optimizer.py  cnn_variable_initializer.py  config.py  convert_data_to_tfrecords.py  dataset_name_factory.py  drive_direction_learner.py  models_utils.py  plot_col_noncol_accuracies_naive_multiple.py  sdae_drive_direction_learner.py  similarity_learner.py  test_model_utils.py  visualizer.py
src/scripts/models/adacnn/: ada_cnn.py  ada_cnn_activation_visualizer.py  ada_cnn_adapter.py  ada_cnn_cnn_hyperparameters_getter.py  ada_cnn_cnn_intializer.py  ada_cnn_cnn_optimizer.py  ada_cnn_constants.py  ada_cnn_data_pool.py  ada_cnn_model_saver.py  ada_cnn_qlearner.py  ada_cnn_utils.py  cnn_learner_detached.py  cnn_learner_naive.py  cnn_optimizer.py  cnn_variable_initializer.py  config.py  data_generator.py  dataset_name_factory.py  models_utils.py  random_search_cnn.py  test_tensorflow_ops.py
src/scripts/models/cerberus_cnn/: cnn_drive_direction_learner.py  cnn_learner_detached.py  cnn_learner_multiple_5_way.py  cnn_model_visualizer.py  cnn_model_visualizer_main.py  cnn_prediction_visualizer.py  cnn_prediction_visualizer_main.py  cnn_variable_initializer.py  plot_col_noncol_accuracies_naive_multiple.py  similarity_learner.py  test_model_utils.py  visualizer.py
src/scripts/models/plotting/: batch_norm_plots.py  plot_accuracy_precision_recall.py  plot_cnn_complexities.py  plot_utility_funciton.py  pool_valid_plots.py
